Fix overflow with percentages

--- a/css/layout.css
+++ b/css/layout.css
@@ -5,12 +5,12 @@ html, body, div{
 
 .full{
     height:100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .half{
     height: 100vh;
-    width: 50vw;
+    width: 50%;
 }
 
 .b{
